--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Brick Game</title>
+    <title>Tetrus Game</title>
 </head>
 <body>
     
@@ -16,6 +16,6 @@
 
 
 
-    <script src="script.js "></script>
+    <script src="index.js"></script>
 </body>
 </html>
